--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
     "vue-material": "^1.0.0-beta-10.2",
