--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-cookie": "^1.1.4",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
+    "vue-star-rating": "^1.6.1",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
