--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64> ./cc-test-reporter
   - chmod +x ./cc-test-reporter
-  - "./cc-test-reporter before-build"
 dist: trusty
 language: node_js
 node_js:
@@ -19,4 +18,6 @@ node_js:
 install:
   - npm install
 after_script:
-  - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+  - "./cc-test-reporter format-coverage test/unit/coverage/lcov.info --input-type lcov"
+  - "export CC_TEST_REPORTER_ID=$CODECLIMATE_REPO_TOKEN"
+  - "./cc-test-reporter upload-coverage"
