--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ node_js:
 install:
   - npm install
   - npm run build
+  - git add dist
 after_script:
   - "./cc-test-reporter format-coverage test/unit/coverage/lcov.info --input-type lcov"
   - "./cc-test-reporter upload-coverage"
