--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,14 +9,15 @@ services:
     restart: always
     ports:
       - "3000:3000"
-    image: donibtk/beta-sabre-server
+    build:
+      context: .
+      dockerfile: Dockerfile.server
     depends_on:
       - postgres
     environment:
       - SABRE_DATABASE_USERNAME=postgres
       - SABRE_DATABASE_PASSWORD=postgres_password
       - SABRE_DATABASE_HOST=postgres
-      - RAILS_MASTER_KEY=${SABRE_RAILS_MASTER_KEY}
   web:
     restart: always
     build:
